--- a/pone.html
+++ b/pone.html
@@ -1,7 +1,6 @@
 --- 
-layout: post 
+layout: page 
 title: 第717天 
-date : 2012-09-05 00:00:00
 --- 
  
 <div class="blog_details_20120222">天气有转凉的趋势，晚上20度左右，睡到半夜闭着眼睛四处摸被子。。。<div>早上略鼻塞，好像是有点凉到了。</div><div><br></div><div>今天輪講，工藤和石居演讲。都是关于refactoring的文章，听着还蛮有趣。</div><div>可是石居的演讲只听了一半，我就被叫去参加跟三星的视频会议去了。有点遗憾。</div><div>三星的Lee工程师在九月底会来大阪一趟，在那之前我们得把项目的prototype做出来。考虑到这周輪講和下周研究室旅行，时间挺紧的。</div><div>现在的项目里搜索引擎那块性能不够，对1亿行代码进行索引估计得花两星期，而性能要求是在48小时之内。所以我和学弟还得做好多优化，大概并行计算hash会快些吧，只是做起来好麻烦。</div><div>加班加班～</div><div><br></div>
